# CG_spring2021

./: CMakeLists.txt  README.md
FPS/: Enemy.cpp  Enemy.h  Projectile.cpp  Projectile.h  Shooter.cpp  VertexShader.vertexshader
common/: controls.cpp  controls.hpp
corona_figure/: CoronaFigureFragmentShader.fragmentshader  corona_figure.cpp
tutorial01_first_window/: tutorial01.cpp
tutorial02_red_triangle/: SimpleFragmentShader.fragmentshader  tutorial02.cpp
tutorial03_matrices/: tutorial03.cpp
tutorial04_colored_cube/: ColorFragmentShader.fragmentshader  tutorial04.cpp
two_triangles/: TwoTrianglesFragmentShader.fragmentshader  TwoTrianglesVertexShader.vertexshader  two_triangles.cpp
